<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/details_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:foreground="@drawable/background_ripple"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/details_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:foreground="@drawable/background_ripple"
            android:src="@drawable/background_favorite"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/details_showcase_image"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:adjustViewBounds="true"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/details_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_image"
            app:shapeAppearanceOverlay="@style/ImageViewSmallRounded" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/details_rate_star"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintBottom_toTopOf="@+id/details_vote_count"
            app:layout_constraintEnd_toStartOf="@+id/details_rate_number"
            app:layout_constraintTop_toTopOf="@+id/details_rate_number"
            tools:rating="3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/details_rate_number"
            app:layout_constraintEnd_toStartOf="@+id/details_rate_number"
            app:layout_constraintTop_toBottomOf="@+id/details_rate_star"
            tools:text="98767 VOTES" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_rate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/details_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="9,7" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_showcase_image"
            app:layout_constraintTop_toBottomOf="@+id/details_image"
            tools:text="Fantastic beasts and where to find them" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/details_showcase_image"
            app:layout_constraintStart_toEndOf="@+id/details_showcase_image"
            app:layout_constraintTop_toBottomOf="@+id/details_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="12/10/22" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="2dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_showcase_image"
            tools:text="Overview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_genres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/details_genres"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_overview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_genres_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/details_original_title_text"
            app:layout_constraintTop_toTopOf="@+id/details_genres_label"
            tools:text="We approach our demand-driven" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_original_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_genres_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_original_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_original_title_label"
            app:layout_constraintTop_toTopOf="@+id/details_original_title_label"
            tools:text="We approach our demand-driven" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_original_title_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_country_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/details_original_title_text"
            app:layout_constraintTop_toTopOf="@+id/details_country_label"
            tools:text="We approach our demand-driven" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_production_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:text="@string/details_company_production"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_country_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_production_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lineSpacingExtra="4dp"
            android:maxLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/details_original_title_text"
            app:layout_constraintTop_toTopOf="@+id/details_production_label"
            tools:text="We approach our demand-driven" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_runtime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_runtime"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_production_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_runtime_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:lineSpacingExtra="4dp"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/details_original_title_text"
            app:layout_constraintTop_toTopOf="@+id/details_runtime_label"
            tools:text="1h 30 min" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/details_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
            details_genres_label, details_genres_text,
            details_original_title_label, details_original_title_text,
            details_country_label, details_country_text,
            details_production_label, details_production_text,
            details_runtime_label, details_runtime_text" />

        <include
            android:id="@+id/loading"
            layout="@layout/include_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>